--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "linclon-backend-api",
   "version": "1.0.0",
   "description": "backend apis for linclon",
-  "main": "app.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Prodip",
   "license": "ISC",
