--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "author": "Prodip",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.25.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.5.1",
-    "express-validator": "^6.13.0",
+    "express-validator": "^6.14.0",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
     "xss-clean": "^0.1.1"
