--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Prodip",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.25.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
