--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.5.1",
-    "express-validator": "^6.13.0",
+    "express-validator": "^6.14.0",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
     "xss-clean": "^0.1.1"
