--- a/package.json
+++ b/package.json
@@ -23,11 +23,20 @@
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.13",
+    "mongoose": "^6.1.8",
     "morgan": "^1.10.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Prodip-Kumar-Paul/Linclon-api-services.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Prodip-Kumar-Paul/Linclon-api-services/issues"
+  },
+  "homepage": "https://github.com/Prodip-Kumar-Paul/Linclon-api-services#readme",
+  "keywords": []
 }
