--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "morgan": "^1.10.0",
+    "vimeo": "^2.1.1",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
