--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.25.0",
+    "cloudinary": "^1.28.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -25,6 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "path": "^0.12.7",
     "vimeo": "^2.1.1",
     "xss-clean": "^0.1.1"
   },
