--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-  "name": "linclon-backend-api",
-  "version": "1.0.0",
-  "description": "backend apis for linclon",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "author": "Prodip",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.25.0",
-    "cloudinary": "^1.28.1",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-mongo-sanitize": "^2.1.0",
-    "express-rate-limit": "^5.5.1",
-    "express-validator": "^6.14.0",
-    "helmet": "^4.6.0",
-    "hpp": "^0.2.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.8",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.4",
-    "path": "^0.12.7",
-    "vimeo": "^2.1.1",
-    "xss-clean": "^0.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Prodip-Kumar-Paul/Linclon-api-services.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Prodip-Kumar-Paul/Linclon-api-services/issues"
-  },
-  "homepage": "https://github.com/Prodip-Kumar-Paul/Linclon-api-services#readme",
-  "keywords": []
+   "name": "linclon-backend-api",
+   "version": "1.0.0",
+   "description": "backend apis for linclon",
+   "main": "server.js",
+   "type": "module",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node server.js",
+      "start:dev": "SET NODE_ENV=dev & nodemon --inspect server.js",
+      "start:prod": "SET NODE_ENV=prod & node server.js"
+   },
+   "author": "Prodip",
+   "license": "ISC",
+   "dependencies": {
+      "axios": "^0.25.0",
+      "cloudinary": "^1.28.1",
+      "compression": "^1.7.4",
+      "cors": "^2.8.5",
+      "dotenv": "^10.0.0",
+      "express": "^4.17.1",
+      "express-mongo-sanitize": "^2.1.0",
+      "express-rate-limit": "^5.5.1",
+      "express-validator": "^6.14.0",
+      "helmet": "^4.6.0",
+      "hpp": "^0.2.3",
+      "jsonwebtoken": "^8.5.1",
+      "mongoose": "^6.1.8",
+      "morgan": "^1.10.0",
+      "multer": "^1.4.4",
+      "path": "^0.12.7",
+      "vimeo": "^2.1.1",
+      "xss-clean": "^0.1.1"
+   },
+   "devDependencies": {
+      "nodemon": "^2.0.15"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/Prodip-Kumar-Paul/Linclon-api-services.git"
+   },
+   "bugs": {
+      "url": "https://github.com/Prodip-Kumar-Paul/Linclon-api-services/issues"
+   },
+   "homepage": "https://github.com/Prodip-Kumar-Paul/Linclon-api-services#readme",
+   "keywords": []
 }
