--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "express-mongo-sanitize": "^2.1.0",
       "express-rate-limit": "^5.5.1",
       "express-validator": "^6.14.0",
+      "fs": "0.0.1-security",
       "helmet": "^4.6.0",
       "hpp": "^0.2.3",
       "jsonwebtoken": "^8.5.1",
